Fix wrapping long task names (#3519)

--- a/src/TeachingRecordSystem.SupportUi/Styles/app.scss
+++ b/src/TeachingRecordSystem.SupportUi/Styles/app.scss
@@ -496,7 +496,7 @@
 
 .trs-task-link {
   &__name {
-    white-space: pre;
+    white-space: pre-wrap;
 
     &:after {
       content: '\A';
